refactor(mapper): replace manual private toXxx methods with MapStruct
NotificationMapper: new interface — toNotificationResponse with readStatus
expression (isRead ? READ : UNREAD); injected into NotificationController.

ClassroomMapper: add toRoomAssetResponse(RoomAsset); ClassroomQueryServiceImpl
delegates via classroomMapper::toRoomAssetResponse, private method removed.

BookingMapper: add toAdminBookingListResponse(Booking) with timeSlots=ignore,
matching the existing AdminBookingDetailResponse pattern; BookingQueryServiceImpl
sets timeSlots explicitly after the mapper call.

Methods left as-is (service assemblers, not mappers): mapToSummary,
mapToHistorySummary, mapToBookingHistorySummary (use translationService bean),
getPenaltyRecordResponse (contains repository.save).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>